Fix top margin spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,7 +52,7 @@ nav {
 }
 
 #opinions {
-  margin: 70px auto 0 auto;
+  margin: 50px auto 0 auto;
   width: 100%;
   .box {
 	  margin: 10px;
@@ -98,6 +98,7 @@ nav {
 }
 
 #opinion_show {
+	margin-top: 50px;
 	.panel-heading {
 		padding: 0;
 	}
@@ -145,4 +146,8 @@ textarea {
 	border-top-left-radius:3px;
 	border-top-right-radius:3px;
   overflow:hidden;
+}
+
+.free_top{
+	margin-top: 50px;
 }
